--- a/test-bitwise.html
+++ b/test-bitwise.html
@@ -20,7 +20,7 @@
 	<body>
 		<header>
 			<nav><a href="./">Sandbox</a></nav>
-			<h1>Bitwise operations / zzz branch</h1>
+			<h1>Bitwise operations / ZZZ 123</h1>
 		</header>
 
 		<p>Please use your console to run the following javascript functions.</p>
